[tool.poetry]
name = "dler"
version = "0.5.0"
description = "python video downloader"
authors = ["wxnacy <wxnacy@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
dler = "dler.cli.main:app"

[tool.poetry.dependencies]
python = "^3.6.2"
multitasker = "^0.0.2"
wpy = "^0.6.1"
wsco = "^0.0.1"
m3u8 = "^1.0.0"
requests = "^2.27.1"
SQLAlchemy = "^1.4.35"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
