[tool.poetry]
name = "dler"
version = "0.5.10"
description = "python video downloader"
authors = ["wxnacy <371032668@qq.com>"]
license = "MIT"

[tool.poetry.scripts]
dler = "dler.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
wsco = "^0.0.1"
multitasker = "^0.0.6"
m3u8 = "^2.0.0"
requests = "^2.27.1"
typer = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Sphinx = "^4.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
